src/test/deca/syntax/invalid/Main2fois.deca
// Description:
//    2 main
//
// Resultats:
//    Une erreur de syntaxe
//
// Historique:
//    cree le 04/01/2023



{

}

{
}
